[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/mech/hud/HUDMech.gd" type="Script" id=1]
[ext_resource path="res://scripts/mech/hud/TorsoTwist.gd" type="Script" id=2]
[ext_resource path="res://scenes/mech/hud/Compass.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/mech/hud/PitchLadder.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/mech/hud/MechHUDAnimationPlayer.gd" type="Script" id=5]
[ext_resource path="res://scenes/mech/hud/Speedometer.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/mech/hud/ReticleGroup.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/mech/hud/HeatGauge.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]

resource_name = "startup"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("ReticleGroup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Center/Compass:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Center/Compass:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Speedometer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Center/PitchLadder:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Center/PitchLadder:rect_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}

[node name="HUDMech" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TorsoTwist" type="Container" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 150.0
margin_right = 100.0
margin_bottom = 170.0
script = ExtResource( 2 )

[node name="TwistLine" type="Line2D" parent="TorsoTwist"]
position = Vector2( 100, 10 )
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 828071216

[node name="CenterLine" type="Line2D" parent="TorsoTwist"]
position = Vector2( 100, 0 )
points = PoolVector2Array( 0, 0, 0, 10 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 828071216
end_cap_mode = 1

[node name="Center" type="Container" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -249.5
margin_right = 360.0
margin_bottom = 249.5

[node name="Compass" parent="Center" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -338.0
margin_right = 337.0

[node name="PitchLadder" parent="Center" instance=ExtResource( 4 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -180.5
margin_right = 20.0
margin_bottom = 179.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/startup = SubResource( 1 )
script = ExtResource( 5 )

[node name="Speedometer" parent="." instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -220.0
margin_right = -160.0
margin_bottom = -20.0

[node name="ReticleGroup" parent="." instance=ExtResource( 7 )]
position = Vector2( 800, 450 )

[node name="HeatGauge" parent="." instance=ExtResource( 8 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 75.0
margin_top = -220.0
margin_right = 125.0
margin_bottom = -40.0

[connection signal="aimpoint_range_updated" from="." to="ReticleGroup" method="_on_HUDMech_aimpoint_range_updated"]
[connection signal="aimpoint_unprojected_updated" from="." to="ReticleGroup" method="_on_HUDMech_aimpoint_unprojected_updated"]
[connection signal="body_pitch_updated" from="." to="Center/PitchLadder" method="_on_HUDMech_body_pitch_updated"]
[connection signal="heading_updated" from="." to="Center/Compass" method="_on_HUDMech_heading_updated"]
[connection signal="heat_updated" from="." to="HeatGauge" method="_on_HUDMech_heat_updated"]
[connection signal="max_rotation_ranges" from="." to="Center/PitchLadder" method="_on_HUDMech_max_rotation_ranges"]
[connection signal="speed_kph_float_updated" from="." to="Speedometer" method="_on_HUDMech_speed_kph_float_updated"]
[connection signal="throttle_updated" from="." to="Speedometer" method="_on_HUDMech_throttle_updated"]
[connection signal="torso_twist_updated" from="." to="TorsoTwist" method="_on_HUDMech_torso_twist_updated"]
